--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "ext-gd": "*",
         "ext-fileinfo": "*",
         "phpoffice/phpspreadsheet": "^4.0",
-      "ext-pdo": "*"
+        "ext-pdo": "*",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
