--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "ext-fileinfo": "*",
         "phpoffice/phpspreadsheet": "^4.0",
         "ext-pdo": "*",
-        "phpmailer/phpmailer": "^6.10",
+        "phpmailer/phpmailer": "*",
         "spipu/html2pdf": "^5.3"
     },
     "require": {
